tests/expectations/parser/program/unclosed_unicode_eof_fail.out
Error [EPAR0370050]: Could not lex the following content: `'`.

    --> test:4:19
     |
   4 |     let d: char = '\u
     |                   ^
Error [EPAR0370050]: Could not lex the following content: `\`.

    --> test:4:20
     |
   4 |     let d: char = '\u
     |                    ^
Error [EPAR0370005]: expected ';' -- found '}'
    --> test:5:1
     |
   5 | }
     | ^
